# crewai-langgraph-multiagent-workflow

./: .gitignore  main.py  pyproject.toml  readme.md
src/: config.py
src/agents/: agent_definitions.py  tools.py
src/crews/: email_crew.py
src/models/: state.py
src/nodes/: workflow_nodes.py
src/tasks/: task_definitions.py
src/workflows/: main_workflow.py
