[tool.poetry]
name = "multipurpose-agent"
version = "0.1.0"
description = "The agent integrates multiple tools, including web scraping, question answering, and data summarization, making it a robust framework for automating complex tasks while ensuring extensibility and scalability."
authors = ["Hugo Albuquerque <hualcosa@amazon.com>"]
license = "MIT 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
langgraph = "^0.2.56"
langchain = "^0.3.9"
openai = "^1.57.0"
langchain-openai = "^0.2.11"
langchain-community = "^0.3.9"
pyowm = "^3.3.0"
crewai = "^0.86.0"
langchain-aws = "^0.2.9"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
